WIP: refactor linked/embedded images and files